@@ -1,3 +1,7 @@
+2014-09-21  Georg-Johann Lay  <avr@gjlay.de>
+
+	* avrtest.c (do_subtraction_8, FUT_ADD_SUB_INDEX): Minor tweak.
+
 2014-09-20  Georg-Johann Lay  <avr@gjlay.de>
 
 	Remove magic action from PUSH, POP, CALL, ... to speed up.
